salvataggio skin + correzione errori