@@ -1,6 +1,5 @@
 package model;
 
-
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -8,10 +7,13 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import controller.AudioManager;
+import model.ShopModel.SkinId;
 
 /**
  * Handles the persistence of collected coins on disk.
@@ -21,7 +23,14 @@ public final class CoinStorage {
     private static final String DIR_NAME = ".fireboywatergirl_save";
     private static final String FILE_NAME = "coins.txt";
     private static final Logger LOGGER = Logger.getLogger(CoinStorage.class.getName());
+    private static final int SKIN_FLAGS = 3;
+    private static final int SHARK_INDEX = 0;
+    private static final int PURPLE_INDEX = 1;
+    private static final int GHOST_INDEX = 2;
+    private static final String FLAG_ON = "1";
+    private static final String FLAG_OFF = "0";
     private static int collectedCoins;
+    private static final boolean[] PURCHASED_SKINS = new boolean[SKIN_FLAGS];
 
     private CoinStorage() { }
 
@@ -45,13 +54,16 @@ public final class CoinStorage {
             if (!Files.exists(path)) {
                 return;
             }
-            final String s = Files.readString(path, StandardCharsets.UTF_8).trim();
-            if (s.isEmpty()) {
+            final List<String> lines = Files.readAllLines(path, StandardCharsets.UTF_8);
+            if (lines.isEmpty()) {
                 return;
             }
-            collectedCoins = Integer.parseInt(s);
+            collectedCoins = Integer.parseInt(lines.get(0).trim());
+            loadSkinFlags(lines);
         } catch (final IOException | NumberFormatException e) {
             LOGGER.log(Level.WARNING, "Invalid coin save data, resetting to 0.", e);
+            collectedCoins = 0;
+            clearSkinFlags();
         }
     }
 
@@ -68,7 +80,12 @@ public final class CoinStorage {
 
             // scrittura atomica: scrive su file temp e poi sostituisce
             final Path tmp = path.resolveSibling(FILE_NAME + ".tmp");
-            Files.writeString(tmp, Integer.toString(collectedCoins), StandardCharsets.UTF_8,
+            final List<String> lines = new ArrayList<>();
+            lines.add(Integer.toString(collectedCoins));
+            lines.add(PURCHASED_SKINS[SHARK_INDEX] ? FLAG_ON : FLAG_OFF);
+            lines.add(PURCHASED_SKINS[PURPLE_INDEX] ? FLAG_ON : FLAG_OFF);
+            lines.add(PURCHASED_SKINS[GHOST_INDEX] ? FLAG_ON : FLAG_OFF);
+            Files.write(tmp, lines, StandardCharsets.UTF_8,
                     StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
             Files.move(tmp, path, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
@@ -101,5 +118,60 @@ public final class CoinStorage {
     public static void paySkinFromShop() {
         collectedCoins -= GameConstants.SKIN_COST;
         saveTotalCoins();
+    }
+
+    /**
+     * Checks whether a skin has already been purchased.
+     *
+     * @param id skin identifier
+     * @return {@code true} if purchased, {@code false} otherwise
+     */
+    public static boolean isSkinPurchased(final SkinId id) {
+        if (id == SkinId.DEFAULT) {
+            return true;
+        }
+        final int idx = skinIndex(id);
+        return idx >= 0 && PURCHASED_SKINS[idx];
+    }
+
+    /**
+     * Marks a skin as purchased and persists the information.
+     *
+     * @param id skin identifier
+     */
+    public static void markSkinPurchased(final SkinId id) {
+        final int idx = skinIndex(id);
+        if (idx >= 0) {
+            PURCHASED_SKINS[idx] = true;
+            saveTotalCoins();
+        }
+    }
+
+    private static void loadSkinFlags(final List<String> lines) {
+        clearSkinFlags();
+        if (lines.size() > 1) {
+            PURCHASED_SKINS[SHARK_INDEX] = FLAG_ON.equals(lines.get(1).trim());
+        }
+        if (lines.size() > 2) {
+            PURCHASED_SKINS[PURPLE_INDEX] = FLAG_ON.equals(lines.get(2).trim());
+        }
+        if (lines.size() > 3) {
+            PURCHASED_SKINS[GHOST_INDEX] = FLAG_ON.equals(lines.get(3).trim());
+        }
+    }
+
+    private static void clearSkinFlags() {
+        for (int i = 0; i < PURCHASED_SKINS.length; i++) {
+            PURCHASED_SKINS[i] = false;
+        }
+    }
+
+    private static int skinIndex(final SkinId id) {
+        return switch (id) {
+            case SHARK -> SHARK_INDEX;
+            case PURPLE -> PURPLE_INDEX;
+            case GHOST -> GHOST_INDEX;
+            case DEFAULT -> -1;
+        };
     }
 }
